# jupiter-mcp

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  Agents.md  DXT_SUMMARY.md  README.md  Spec.md  jupiter-mcp-latest.dxt  pyproject.toml  run_server.py
.cursor/: mcp.json
.github/workflows/: job-pre-commit.yml
dxt/: README.md  manifest.json
dxt/server/: jupiter_wrapper.py
scripts/: build-dxt.sh
src/: __init__.py  jupiter_api.py  jupiter_ultra_api.py  server.py
tests/: conftest.py  test_jupiter_api.py  test_jupiter_ultra_api.py  test_jupiter_ultra_mcp.py
