[project]
name = "jupiter-ultra-mcp"
version = "0.1.0"
description = "Jupiter Ultra MCP Server - Python MCP server with tools to access Jupiter Ultra API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.4.0",
    "solana>=0.34.0",
    "solders>=0.21.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
jupiter-ultra-mcp = "src.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

[project.optional-dependencies]
dev = [
    "ruff>=0.6.3",
    "pre-commit>=3.3.3",
    "pytest",
    "pytest-asyncio<0.23",
    "pytest-cov",
]

[tool.pyright]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.isort]
profile = "black"
src_paths = "tests"
line_length = 80
include_trailing_comma = true
multi_line_output = 3

[tool.ruff]
exclude = ["__pycache__", "terraform", ".git", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]
